--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+@source "../../../node_modules/streamdown/dist/*.js";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -135,6 +136,8 @@ code {
 	}
 }
 
+/* Text shimmer animation */
+
 @utility text-shimmer {
 	color: transparent;
 	background-clip: text !important;
@@ -150,7 +153,17 @@ code {
 	}
 }
 
-/* HTML: <div class="loader"></div> */
+@keyframes shimmer {
+	0% {
+		background-position: 200% 0%;
+	}
+	100% {
+		background-position: -200% 0%;
+	}
+}
+
+/* Chat response loading animation */
+
 @utility chat-response-loading {
 	width: 20px;
 	aspect-ratio: 2;
@@ -190,11 +203,23 @@ code {
 	}
 }
 
-@keyframes shimmer {
-	0% {
-		background-position: 200% 0%;
-	}
-	100% {
-		background-position: -200% 0%;
-	}
+/* Streamdown styles */
+
+[data-streamdown='heading-1'],
+[data-streamdown='heading-2'] {
+	font-size: 20px;
+}
+
+[data-streamdown='heading-3'],
+[data-streamdown='heading-4'],
+[data-streamdown='heading-5'],
+[data-streamdown='heading-6'] {
+	font-size: 18px;
+}
+
+[data-streamdown='code-block'],
+[data-streamdown='code-block-header'],
+[data-streamdown='table-header'],
+[data-streamdown='table-body'] {
+	background-color: var(--background);
 }
